--- a/vote-system/public/index.html
+++ b/vote-system/public/index.html
@@ -22,7 +22,11 @@
         <div id="vote-screen" class="hidden">
             <div class="status-bar">
                 <span id="status-text">準備中</span>
-                <span>⏱ <span id="timer">0s</span> | 👥 <span id="total-votes">0</span></span>
+                <span>
+                    ⏱ <span id="timer">0s</span> | 
+                    👥 加入: <span id="joined-count">0</span> | 
+                    🗳️ 已投: <span id="total-votes">0</span>
+                </span>
             </div>
             
             <div id="question-text" class="question"></div>
