--- a/vote-system/public/host.html
+++ b/vote-system/public/host.html
@@ -80,7 +80,11 @@
             <div id="vote-screen">
                 <div class="status-bar">
                     <span id="status-text">等待中</span>
-                    <span>⏱ <span id="timer">0s</span> | 👥 <span id="total-votes">0</span></span>
+                    <span>
+                        ⏱ <span id="timer">0s</span> | 
+                        👥 加入: <span id="joined-count">0</span> | 
+                        🗳️ 已投: <span id="total-votes">0</span>
+                    </span>
                 </div>
                 <div id="question-text" class="question">等待發布...</div>
                 <div id="options-container"></div>
@@ -110,8 +114,6 @@
             });
         });
     </script>
-</body>
-</html>
 </body>
 </html>
 
