--- a/vote-system/public/index.html
+++ b/vote-system/public/index.html
@@ -9,49 +9,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500&family=Noto+Serif+TC:wght@400;600;900&display=swap" rel="stylesheet">
     <style>
-        /* 入口頁面專用樣式 */
-        .portal-container {
-            width: 100%;
-            max-width: 500px;
-            text-align: center;
-        }
+        .portal-container { width: 100%; max-width: 500px; text-align: center; }
         .role-card {
-            background: #fff;
-            border: 1px solid var(--border);
-            padding: 30px;
-            margin-bottom: 20px;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: all 0.3s;
-            text-decoration: none;
-            display: block;
-            color: var(--text-main);
+            background: #fff; border: 1px solid var(--border);
+            padding: 30px; margin-bottom: 20px; border-radius: 4px;
+            cursor: pointer; transition: all 0.3s; text-decoration: none;
+            display: block; color: var(--text-main);
         }
-        .role-card:hover {
-            border-color: var(--primary);
-            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
-            transform: translateY(-3px);
-        }
-        .role-icon {
-            font-size: 3rem;
-            margin-bottom: 15px;
-            display: block;
-        }
-        .role-title {
-            font-family: 'Noto Serif TC', serif;
-            font-size: 1.5rem;
-            font-weight: 600;
-            margin-bottom: 5px;
-            display: block;
-        }
-        .role-desc {
-            font-size: 0.9rem;
-            color: var(--text-light);
-            display: block;
-        }
+        .role-card:hover { border-color: var(--primary); box-shadow: 0 4px 15px rgba(0,0,0,0.05); transform: translateY(-3px); }
+        .role-icon { font-size: 3rem; margin-bottom: 15px; display: block; }
+        .role-title { font-family: 'Noto Serif TC'; font-size: 1.5rem; font-weight: 600; margin-bottom: 5px; display: block; }
+        .role-desc { font-size: 0.9rem; color: var(--text-light); display: block; }
     </style>
 </head>
-<body>
+<body id="portal-page">
     <div class="container portal-container">
         <h1 style="margin-bottom: 10px;">歡迎使用</h1>
         <p style="margin-bottom: 40px; color: var(--text-light); font-family: 'Noto Serif TC';">請選擇您的身份進入系統</p>
@@ -68,7 +39,7 @@
             <span class="role-desc">建立題目與控制流程</span>
         </a>
         
-        <p style="font-size: 0.8rem; color: #cbd5e1; margin-top: 30px;">System v2.0 • Literary Edition</p>
+        <p style="font-size: 0.8rem; color: #cbd5e1; margin-top: 30px;">Literary Vote System v2.0</p>
     </div>
 </body>
 </html>
