--- a/vote-system/public/participant.html
+++ b/vote-system/public/participant.html
@@ -18,7 +18,15 @@
             <input type="number" id="pin-input" placeholder="0000" maxlength="4">
             <button id="join-btn" class="btn">進入投票室</button>
         </div>
-
+<div id="login-screen">
+    <h1 style="text-align:center; margin-bottom:10px;">加入會議</h1>
+    <p style="text-align:center; margin-bottom:30px; color:var(--text-light); font-family:'Noto Serif TC'">Please enter details</p>
+    
+    <input type="text" id="username-input" placeholder="您的姓名 / 暱稱" style="margin-bottom:10px; text-align:center;">
+    
+    <input type="number" id="pin-input" placeholder="PIN 碼" maxlength="4">
+    <button id="join-btn" class="btn">進入投票室</button>
+</div>
         <div id="vote-screen" class="hidden">
             <div class="status-bar">
                 <span id="status-text">準備中</span>
@@ -42,4 +50,5 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
