--- a/vote-system/public/host.html
+++ b/vote-system/public/host.html
@@ -96,6 +96,25 @@
                         🗳️ <span id="total-votes">0</span>
                     </span>
                 </div>
+                <div id="vote-screen">
+                <div class="status-bar">
+                    <span id="status-text">等待中</span>
+                    <span>
+                        ⏱ <span id="timer">0s</span> | 
+                        👥 <span id="joined-count">0</span> | 
+                        🗳️ <span id="total-votes">0</span>
+                    </span>
+                </div>
+                <div id="question-text" class="question">等待發布...</div>
+                <div id="options-container"></div>
+            </div>
+
+            <div class="history-section">
+                <h3 style="font-family:'Noto Serif TC'; margin-bottom:15px; color:var(--text-light);">🗄️ 會議歷史紀錄</h3>
+                <div id="history-container">
+                    <p style="text-align:center; color:#ccc; font-size:0.9rem;">尚未有歸檔紀錄</p>
+                </div>
+            </div>
                 <div id="question-text" class="question">等待發布...</div>
                 <div id="options-container"></div>
             </div>
@@ -129,5 +148,6 @@
     </script>
 </body>
 </html>
+
 
 
