--- a/vote-system/public/host.html
+++ b/vote-system/public/host.html
@@ -68,7 +68,11 @@
                     <button id="clear-form-btn" class="btn" style="background:#8e8d8a; flex:1;">🧹 清空</button>
                     <button id="start-vote-btn" class="btn" style="flex:2;">🚀 發布</button>
                 </div>
-                <button id="stop-vote-btn" class="btn btn-stop">🛑 強制結束</button>
+                <button id="stop-vote-btn" class="btn btn-stop">🛑 強制結束 (本題)</button>
+                
+                <hr style="border:0; border-top:1px dashed var(--border); margin:20px 0;">
+                
+                <button id="terminate-btn" class="btn" style="background:var(--text-main); color:white;">🏁 結束整場會議</button>
                 <button id="export-btn" class="btn" style="background:var(--success); margin-top:10px;">📥 下載結果 (CSV)</button>
             </div>
         </div>
@@ -135,4 +139,3 @@
     </script>
 </body>
 </html>
-
