--- a/vote-system/public/participant.html
+++ b/vote-system/public/participant.html
@@ -23,6 +23,10 @@
         </div>
 
         <div id="vote-screen" class="hidden">
+            <div style="text-align: right; margin-bottom: 10px;">
+                <button id="leave-btn" style="background: transparent; border: 1px solid var(--border); color: var(--text-light); padding: 5px 10px; border-radius: 4px; cursor: pointer; font-size: 0.8rem;">🏃 離開會議</button>
+            </div>
+
             <div class="status-bar">
                 <span id="status-text">準備中</span>
                 <span>
