--- a/vote-system/public/participant.html
+++ b/vote-system/public/participant.html
@@ -11,6 +11,11 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body id="participant-page">
+    <div class="font-control-box">
+        <button id="font-up" class="font-btn" title="放大字體">A+</button>
+        <button id="font-down" class="font-btn" title="縮小字體">A-</button>
+    </div>
+
     <div class="container">
         
         <div id="login-screen">
