--- a/vote-system/public/host.html
+++ b/vote-system/public/host.html
@@ -30,9 +30,15 @@
     </div>
 
     <div id="settings-modal" class="hidden" style="position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:5000; display:flex; justify-content:center; align-items:center;">
-        <div class="container" style="max-width:500px; padding:30px; position:relative;">
+        <div class="container" style="max-width:500px; padding:30px; position:relative; max-height: 90vh; overflow-y: auto;">
             <button id="close-settings-btn" style="position:absolute; top:15px; right:15px; background:none; border:none; font-size:1.5rem; cursor:pointer;">&times;</button>
             <h2 style="margin-bottom:20px; text-align:center;">⚙️ 系統設定</h2>
+
+            <div style="border-bottom:1px dashed var(--border); padding-bottom:20px; margin-bottom:20px;">
+                <h3 style="font-size:1.1rem; margin-bottom:10px;">👤 修改主持人暱稱</h3>
+                <input type="text" id="new-host-name" placeholder="預設: HOST" style="margin-bottom:10px;">
+                <button id="save-host-name-btn" class="btn" style="background:var(--primary); color:white;">儲存暱稱</button>
+            </div>
 
             <div style="border-bottom:1px dashed var(--border); padding-bottom:20px; margin-bottom:20px;">
                 <h3 style="font-size:1.1rem; margin-bottom:10px;">🔑 修改主持人密碼</h3>
