--- a/vote-system/public/host.html
+++ b/vote-system/public/host.html
@@ -101,7 +101,7 @@
                     <button id="clear-form-btn" class="btn" style="background:#8e8d8a; flex:1;">🧹 清空</button>
                     <button id="start-vote-btn" class="btn" style="flex:2;">🚀 發布</button>
                 </div>
-                <button id="stop-vote-btn" class="btn btn-stop">🛑 強制結束 (本題)</button>
+                <button id="stop-vote-btn" class="btn btn-stop">🛑 結束投票</button>
                 
                 <hr style="border:0; border-top:1px dashed var(--border); margin:20px 0;">
                 
