--- a/vote-system/public/host.html
+++ b/vote-system/public/host.html
@@ -110,37 +110,24 @@
             </div>
         </div>
 
-        <div class="container">
-            <div class="link-info-box">
-                <div class="link-label">掃描加入會議</div>
-                <div id="qrcode" style="display:flex; justify-content:center; margin: 15px 0;"></div>
-                <div class="link-label">或輸入網址</div>
-                <a id="join-link" href="#" target="_blank" class="link-text">Loading...</a>
-                <hr style="border:0; border-top:1px dashed var(--border); margin:15px 0;">
-                <button id="open-projector-btn" class="btn" style="background:#8b5cf6;">
-                    📺 開啟大螢幕投影頁面
-                </button>
-            </div>
-
-            <h2 style="margin-bottom:20px;">📱 現場預覽</h2>
+        <div class="container" style="padding:0; overflow:hidden; display:flex; flex-direction:column;">
             
-            <div id="vote-screen">
-                <div class="status-bar">
-                    <span id="status-text">等待中</span>
-                    <span>
-                        ⏱ <span id="timer">0s</span> | 
-                        👥 <span id="joined-count">0</span> | 
-                        🗳️ <span id="total-votes">0</span>
-                    </span>
+            <div style="padding: 20px 20px 10px 20px; border-bottom: 1px solid var(--border); background:#fcfcfc;">
+                <h2 style="margin-bottom:10px;">📱 您的與會者畫面</h2>
+                <div class="link-info-box" style="margin:0; padding:10px; font-size:0.9rem;">
+                    <div class="link-label">掃描加入</div>
+                    <div id="qrcode" style="display:flex; justify-content:center; margin: 5px 0;"></div>
+                    <div class="link-label">網址: <a id="join-link" href="#" target="_blank" class="link-text">...</a></div>
+                    <button id="open-projector-btn" class="btn" style="margin-top:10px; padding:8px; font-size:0.8rem; background:#8b5cf6;">📺 開啟投影</button>
                 </div>
-                <div id="question-text" class="question">等待發布...</div>
-                <div id="options-container"></div>
             </div>
 
-            <div class="history-section">
-                <h3 style="font-family:'Noto Serif TC'; margin-bottom:15px; color:var(--text-light);">🗄️ 會議歷史紀錄</h3>
+            <iframe src="participant.html" style="width:100%; height:100%; border:none; flex:1; background:var(--bg-paper);"></iframe>
+            
+            <div class="history-section" style="margin:0; padding:20px; max-height:200px; overflow-y:auto; border-top:1px solid var(--border);">
+                <h3 style="font-family:'Noto Serif TC'; margin-bottom:10px; color:var(--text-light); font-size:1rem;">🗄️ 會議歷史紀錄</h3>
                 <div id="history-container">
-                    <p style="text-align:center; color:#ccc; font-size:0.9rem;">尚未有歸檔紀錄</p>
+                    <p style="text-align:center; color:#ccc; font-size:0.8rem;">尚未有歸檔紀錄</p>
                 </div>
             </div>
         </div>
@@ -164,7 +151,7 @@
 
             new QRCode(document.getElementById("qrcode"), {
                 text: targetUrl,
-                width: 120, height: 120,
+                width: 80, height: 80, // 稍微縮小一點
                 colorDark : "#3f4238", colorLight : "#ffffff",
                 correctLevel : QRCode.CorrectLevel.H
             });
