--- a/vote-system/public/host.html
+++ b/vote-system/public/host.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500&family=Noto+Serif+TC:wght@400;600;900&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body id="host-page">
@@ -124,16 +123,11 @@
         </div>
 
         <div class="container" style="padding:0; overflow:hidden; display:flex; flex-direction:column;">
-            <div style="padding: 20px 20px 10px 20px; border-bottom: 1px solid var(--border); background:#fcfcfc;">
-                <h2 style="margin-bottom:10px;">📱 您的與會者畫面</h2>
-                <div class="link-info-box" style="margin:0; padding:10px; font-size:0.9rem;">
-                    <div class="link-label">掃描加入</div>
-                    <div id="qrcode" style="display:flex; justify-content:center; margin: 5px 0;"></div>
-                    <div class="link-label">網址: <a id="join-link" href="#" target="_blank" class="link-text">...</a></div>
-                    <button id="open-projector-btn" class="btn" style="margin-top:10px; padding:8px; font-size:0.8rem; background:#8b5cf6;">📺 開啟投影</button>
-                </div>
+            <div style="padding: 15px 20px; border-bottom: 1px solid var(--border); background:#fcfcfc;">
+                <h2 style="margin:0; font-size:1.3rem;">📱 您的與會者畫面</h2>
             </div>
             <iframe src="participant.html" style="width:100%; height:100%; border:none; flex:1; background:var(--bg-paper);"></iframe>
+            
             <div class="history-section" style="margin:0; padding:20px; max-height:200px; overflow-y:auto; border-top:1px solid var(--border);">
                 <h3 style="font-family:'Noto Serif TC'; margin-bottom:10px; color:var(--text-light); font-size:1rem;">🗄️ 會議歷史紀錄</h3>
                 <div id="history-container">
@@ -149,23 +143,5 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="app.js"></script>
-    <script>
-        window.addEventListener('load', () => {
-            let baseUrl = window.location.href.replace('/host.html', '');
-            if(baseUrl.endsWith('/')) baseUrl = baseUrl.slice(0, -1);
-            const targetUrl = baseUrl + '/participant.html';
-
-            const linkEl = document.getElementById('join-link');
-            linkEl.textContent = targetUrl;
-            linkEl.href = targetUrl;
-
-            new QRCode(document.getElementById("qrcode"), {
-                text: targetUrl,
-                width: 80, height: 80,
-                colorDark : "#3f4238", colorLight : "#ffffff",
-                correctLevel : QRCode.CorrectLevel.H
-            });
-        });
-    </script>
-</body>
+    </body>
 </html>
