--- a/vote-system/public/host.html
+++ b/vote-system/public/host.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500&family=Noto+Serif+TC:wght@400;600;900&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body id="host-page">
@@ -56,7 +57,7 @@
     </div>
 
     <div class="host-grid">
-        <div class="container" style="display:flex; flex-direction:column; height: 90vh; overflow-y: auto;">
+        <div class="container" style="display:flex; flex-direction:column; height: 100%; overflow-y: auto;">
             <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
                 <h2 style="margin:0;">🎛 控制面板</h2>
                 <button id="open-settings-btn" style="background:none; border:none; font-size:1.5rem; cursor:pointer;" title="設定">⚙️</button>
@@ -126,7 +127,8 @@
             <div style="padding: 15px 20px; border-bottom: 1px solid var(--border); background:#fcfcfc;">
                 <h2 style="margin:0; font-size:1.3rem;">📱 您的與會者畫面</h2>
             </div>
-            <iframe src="participant.html" style="width:100%; height:100%; border:none; flex:1; background:var(--bg-paper);"></iframe>
+            
+            <iframe src="participant.html?clean=true" style="width:100%; height:100%; border:none; flex:1; background:var(--bg-paper);"></iframe>
             
             <div class="history-section" style="margin:0; padding:20px; max-height:200px; overflow-y:auto; border-top:1px solid var(--border);">
                 <h3 style="font-family:'Noto Serif TC'; margin-bottom:10px; color:var(--text-light); font-size:1rem;">🗄️ 會議歷史紀錄</h3>
@@ -143,5 +145,5 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="app.js"></script>
-    </body>
+</body>
 </html>
