--- a/vote-system/public/host.html
+++ b/vote-system/public/host.html
@@ -123,7 +123,7 @@
             </div>
         </div>
 
-        <div class="container" style="padding:0; overflow:hidden; display:flex; flex-direction:column;">
+        <div class="container preview-container">
             <div style="padding: 15px 20px; border-bottom: 1px solid var(--border); background:#fcfcfc;">
                 <h2 style="margin:0; font-size:1.3rem;">📱 您的與會者畫面</h2>
             </div>
