--- a/vote-system/public/admin.html
+++ b/vote-system/public/admin.html
@@ -24,7 +24,7 @@
         <div class="container" style="max-width:400px; text-align:center; padding:50px;">
             <div style="font-size:3rem; margin-bottom:20px;">🛡️</div>
             <h2 style="margin-bottom:10px;">管理員登入</h2>
-            <p style="color:var(--text-light); margin-bottom:30px;">Default: 8888</p>
+            <p style="color:var(--text-light); margin-bottom:30px;">請輸入管理員密碼</p>
             <input type="password" id="admin-password-input" placeholder="Password" style="text-align:center; letter-spacing:3px; font-size:1.2rem; margin-bottom:20px;">
             <button id="admin-login-submit" class="btn">進入後台</button>
             <p id="login-error-msg" style="color:var(--danger); margin-top:15px; opacity:0; transition:opacity 0.3s;">密碼錯誤</p>
