--- a/vote-system/public/admin.html
+++ b/vote-system/public/admin.html
@@ -6,9 +6,21 @@
     <title>系統管理後台</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500&family=Noto+Serif+TC:wght@400;600;700;900&display=swap" rel="stylesheet">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAALQAAAC0CAMAAAAKE/YAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAwUExURQAAAF5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTrg7dDkAAAAPdFJOUwAgbDCIgH+AsEC/n4+frz3gmlIAAAAcSURBVHhe7cExAQAAAMKg9U9tCy8gAAAAAAAAdwoBUAAB03kF0wAAAABJRU5ErkJggg==">
+    <link rel="icon" type="image/png" sizes="32x32" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAMAAABEpIrGAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAwUExURQAAAF5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTl5kTrg7dDkAAAAPdFJOUwAgbDCIgH+AsEC/n4+frz3gmlIAAAAcSURBVDhPY2BEAwxgJCNpEBsYVcCogFExYCoGAC5wABU+m7e9AAAAAElFTkSuQmCC">
+
     <style>
         .admin-card { background: #fff; border: 1px solid var(--border); border-radius: 8px; padding: 20px; margin-bottom: 20px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
-        .mt-list-item { display: grid; grid-template-columns: 1fr 2fr 1fr 1fr 1fr auto; gap: 10px; align-items: center; padding: 15px; border-bottom: 1px solid #eee; font-size: 0.9rem; }
+        .mt-list-item { 
+            display: grid; 
+            grid-template-columns: 0.8fr 1.5fr 1fr 0.8fr 1.8fr auto; 
+            gap: 10px; 
+            align-items: center; 
+            padding: 15px; 
+            border-bottom: 1px solid #eee; 
+            font-size: 0.9rem; 
+        }
         .mt-list-header { font-weight: bold; background: #faf9f6; border-bottom: 2px solid var(--border); }
         .status-tag { padding: 2px 8px; border-radius: 4px; font-size: 0.8rem; }
         .status-waiting { background: #e2e8f0; color: #475569; }
@@ -16,6 +28,28 @@
         .status-ended { background: #fee2e2; color: #991b1b; }
         .timeout-control { display: flex; align-items: center; gap: 5px; }
         .timeout-input { width: 50px; padding: 4px; text-align: center; border: 1px solid #ccc; border-radius: 4px; }
+
+        @media (max-width: 768px) {
+            .mt-list-header { display: none; }
+            .mt-list-item {
+                display: grid;
+                grid-template-columns: 1fr 1fr; 
+                gap: 12px;
+                background: #fff;
+                border: 1px solid var(--border);
+                border-radius: 8px;
+                margin-bottom: 15px;
+                box-shadow: 0 4px 6px rgba(0,0,0,0.02);
+                padding: 20px;
+            }
+            .mt-list-item > div:nth-child(1) { grid-column: 1 / 2; font-size: 1.2rem; font-weight: bold; }
+            .mt-list-item > div:nth-child(2) { grid-column: 2 / 3; text-align: right; font-weight: 500; color: var(--text-main); overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+            .mt-list-item > div:nth-child(3) { grid-column: 1 / 2; }
+            .mt-list-item > div:nth-child(4) { grid-column: 2 / 3; text-align: right; }
+            .mt-list-item > div:nth-child(5) { grid-column: 1 / 3; background: #faf9f6; padding: 10px; border-radius: 6px; justify-content: center; margin-top: 5px; }
+            .mt-list-item > div:nth-child(6) { grid-column: 1 / 3; }
+            .mt-list-item > div:nth-child(6) button { width: 100%; padding: 12px; font-size: 1rem; margin-top: 5px; }
+        }
     </style>
 </head>
 <body id="admin-page">
@@ -23,12 +57,11 @@
     <div id="admin-auth-overlay" style="position:fixed; top:0; left:0; width:100%; height:100%; background:var(--bg-paper); z-index:9999; display:flex; flex-direction:column; justify-content:center; align-items:center;">
         <div class="container" style="max-width:400px; text-align:center; padding:50px;">
             <div style="font-size:3rem; margin-bottom:20px;">🛡️</div>
-            <h2 style="margin-bottom:10px;">管理員登入</h2>
-            <p style="color:var(--text-light); margin-bottom:30px;">請輸入管理員密碼</p>
+            <h2 style="margin-bottom:30px;">管理員登入</h2>
             <input type="password" id="admin-password-input" placeholder="Password" style="text-align:center; letter-spacing:3px; font-size:1.2rem; margin-bottom:20px;">
             <button id="admin-login-submit" class="btn">進入後台</button>
             <p id="login-error-msg" style="color:var(--danger); margin-top:15px; opacity:0; transition:opacity 0.3s;">密碼錯誤</p>
-            <a href="index.html" style="display:block; margin-top:30px; color:var(--text-light); text-decoration:none; font-size:0.9rem;">← 返回首頁</a>
+            <button onclick="location.href='index.html?skip=1'" class="btn" style="background:transparent; border:none; color:var(--text-light); margin-top:30px; box-shadow:none;">← 返回首頁</button>
         </div>
     </div>
 
@@ -37,7 +70,7 @@
             <h1>系統管理後台</h1>
             <div style="text-align: right;">
                 <p style="color: var(--text-light); font-size: 0.9rem;">Server Status: Online</p>
-                <button onclick="location.href='index.html'" style="background:none; border:none; color:var(--primary); cursor:pointer;">登出</button>
+                <button onclick="location.href='index.html?skip=1'" style="background:none; border:none; color:var(--primary); cursor:pointer;">登出</button>
             </div>
         </div>
 
