--- a/vote-system/public/host.html
+++ b/vote-system/public/host.html
@@ -136,7 +136,7 @@
             <div class="phone-mockup">
                 <div class="phone-notch"></div>
                 <div class="phone-screen">
-                    <iframe src="participant.html?clean=true" style="width:100%; height:100%; border:none;"></iframe>
+                    <iframe src="participant.html?clean=true&preview=true" style="width:100%; height:100%; border:none;"></iframe>
                 </div>
             </div>
         </div>
